--- a/.github/workflows/main-ci.yaml
+++ b/.github/workflows/main-ci.yaml
@@ -30,10 +30,10 @@ jobs:
           pip install -r requirements.txt
           pip install flake8
           
-      # Test the Code
-      - name: Run Linting tests
-        run: |
-          flake8 --ignore=E501,F401 .
+      # # Test the Code
+      # - name: Run Linting tests
+      #   run: |
+      #     flake8 --ignore=E501,F401 .
       
       - name: Docker Credentials
         uses: docker/login-action@v2
@@ -74,9 +74,4 @@ jobs:
           git remote set-url origin https://github-actions:${{ secrets.ACCESS_GITHUB_TOKEN }}@github.com/SIKANDERKUMBHAR/flask-game.git
           git push origin master
 
-      
-
-
-        
-      
 
