--- a/.github/workflows/main-ci.yaml
+++ b/.github/workflows/main-ci.yaml
@@ -67,8 +67,8 @@ jobs:
       # Update Github
       - name: Commit the changes
         run: |
-          git config --global user.email "<>"
-          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "sikanderalikumbhar1@gmail.com"
+          git config --global user.name "SIKANDERKUMBHAR"
           git add deploy/deploy.yaml
           git commit -m "Update deploy.yaml with new image version - ${{ env.VERSION }}"
           git remote set-url origin https://github-actions:${{ secrets.ACCESS_GITHUB_TOKEN }}@github.com/SIKANDERKUMBHAR/flask-game.git
