--- a/.github/workflows/main-ci.yaml
+++ b/.github/workflows/main-ci.yaml
@@ -71,7 +71,7 @@ jobs:
           git config --global user.name "SIKANDERKUMBHAR"
           git add deploy/deploy.yaml
           git commit -m "Update deploy.yaml with new image version - ${{ env.VERSION }}"
-          git remote set-url origin https://github-actions:${{ secrets.ACCESS_GITHUB_TOKEN }}@github.com/SIKANDERKUMBHAR/flask-game.git
+          git remote set-url origin https://github-actions:${{ secrets.GITHUB_TOKEN }}@github.com/SIKANDERKUMBHAR/flask-game.git
           git push origin main
 
 
