--- a/deploy/deploy.yaml
+++ b/deploy/deploy.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: demo-app
-        image: sikanderali/flask-game:01
+        image: sikanderali/flask-game:v20250415151417
         ports:
         - containerPort: 5000
